[package]
name = "open-coroutine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
#使用内存池快速分配/释放对象
bumpalo = { version = "3.10.0", features = ["boxed", "collections", "allocator_api"] }

[target."cfg(windows)".dependencies.kernel32-sys]
version = "0.2.2"
[target."cfg(windows)".dependencies.winapi]
version = "0.2.2"

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"