[package]
name = "open-coroutine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
lazy_static = "1.4.0"
crossbeam-deque = "0.8.1"

[target."cfg(windows)".dependencies.kernel32-sys]
version = "0.2.2"
[target."cfg(windows)".dependencies.winapi]
version = "0.2.2"

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"