[package]
name = "open-coroutine"
version = "0.1.0"
edition = "2021"

[dependencies]
memory-pool = { path = "../memory-pool" }
object-list = { path = "../object-list" }
timer = { path = "../timer" }
id-generator = { path = "../id-generator" }
once_cell = "1.13.0"

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"
